-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 9.0.2, Qt Creator 10.0.0-beta2
-
ce7b99bc8 (master)
In Qt Creator 8.0.2, it was possible to specify the working directory for deployment on a remote QNX device. In Qt Creator 9.0.2 and 10.0.0-beta2, this functionality does not seem to be working.
Setting "Projects -> Run Settings -> Run -> Working directory:" to "\tmp" results in the following application output:
<time>: Checking available ports...
<time>: Found 101 free ports.
<time>: Starting pdebug 10014 on Target...
sh: cd: /ssh:/root@<ip_address>/tmp- No such file or directory
<time>: Debugging MyApp...
---------------------
"sh: cd: /ssh:/root@<ip_address>/tmp- No such file or directory"
It looks like it's using FilePath::toString() instead of ::nativePath() (which on unix is equivalent to ::path())
For Gerrit Dashboard: QTCREATORBUG-28900 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
473632,7 | RemoteLinux: Honor working directory setting again | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |