RemoteLinux: Honor working directory setting again

Fixes: QTCREATORBUG-28900
Change-Id: I163877a749f378b2aa7579c1985e58f8a9d87e2c
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>